--- a/src/fxml/ATHLETETRACKER.fxml
+++ b/src/fxml/ATHLETETRACKER.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.text.*?>
@@ -166,7 +167,7 @@
                                     <TextField fx:id="ecPhoneAddAthleteText2" layoutX="320.0" layoutY="100.0" prefHeight="25.0" prefWidth="190.0" promptText="Emergency Contact Two Phone" styleClass="addAthlete" />
                                  </children>
                               </AnchorPane>
-                              <AnchorPane layoutY="419.0" prefHeight="422.0" prefWidth="800.0">
+                              <AnchorPane layoutX="1.0" layoutY="419.0" prefHeight="422.0" prefWidth="800.0">
                                  <children>
                                     <Label fx:id="insuranceInformationAddAthleteLabel" layoutX="343.0" layoutY="4.0" styleClass="addAthlete" text="Insurance Information">
                                        <font>
@@ -192,6 +193,9 @@
                                     <TextField fx:id="deductableAddAthleteText" layoutX="411.0" layoutY="290.0" prefHeight="25.0" prefWidth="100.0" promptText="Deductable" styleClass="addAthlete" />
                                     <ComboBox fx:id="referralAddAthleteComboBox" layoutX="551.0" layoutY="290.0" prefHeight="25.0" prefWidth="149.0" promptText="Require  a Referral?" styleClass="addAthlete" />
                                     <Button fx:id="addAthleteButton" layoutX="361.0" layoutY="330.0" maxHeight="50.0" maxWidth="100.0" minHeight="50.0" minWidth="100.0" mnemonicParsing="false" onAction="#addAthleteButtonAction" prefHeight="50.0" prefWidth="100.0" styleClass="addAthlete" text="Add Athlete" />
+                                    <Label layoutX="113.0" layoutY="294.0" text="\$" textFill="WHITE" />
+                                    <Label layoutX="264.0" layoutY="294.0" text="\$" textFill="WHITE" />
+                                    <Label layoutX="404.0" layoutY="294.0" text="\$" textFill="WHITE" />
                                  </children>
                               </AnchorPane>
                            </children>
