--- a/src/fxml/EDITINJURY.fxml
+++ b/src/fxml/EDITINJURY.fxml
@@ -108,7 +108,7 @@
                                                 <Font name="System Bold" size="14.0" />
                                              </font>
                                           </Label>
-                                          <Button fx:id="makeChangesButton" layoutX="339.0" layoutY="621.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="100.0" text="Make Changes" />
+                                          <Button fx:id="makeChangesButton" layoutX="339.0" layoutY="621.0" mnemonicParsing="false" onAction="#makeChangesButtonPressed" prefHeight="33.0" prefWidth="100.0" text="Make Changes" />
                                           <CheckBox fx:id="editInjuryActiveInjuryCheckBox" layoutX="586.0" layoutY="45.0" mnemonicParsing="false" styleClass="editInjury" text="Active Injury" />
                                           <Label fx:id="editInjuryInjuryDateLabel1" layoutX="470.0" layoutY="48.0" styleClass="editInjury" text="Date" />
                                           <Label fx:id="editInjuryInjuryTypeLabel1" layoutX="339.0" layoutY="48.0" styleClass="editInjury" text="InjuryType" />
